@@ -1,5 +1,11 @@
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Device.cc (Read_Disk_Layout): logic unallocated space wasn't read correctly, fixed.
+	* include/Win_GParted.h: added open_operationslist() and menu_view_operations() .
+	* src/Win_GParted.cc: tweaked operationlist behaviour a bit. Also added 'Operations" toggle-item to View menu.
+
+2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Device.cc (Read_Disk_Layout): Again =) Decided to use switch ( blahblah ) instead of if else statements.
 
 2004-10-11 Bart Hakvoort  <gparted@users.sf.net>
